# brazilian_ecommerce

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20251127230854_create_customers_table.sql  20251202204230_create_geolocation_table.sql  20251202204230_create_sellers_table.sql  20251203230854_create_customers_table.sql  20251204114631_create_orders_table.sql
src/: config.rs  error.rs  handlers.rs  main.rs  models.rs  repositories.rs  services.rs  state.rs
