[package]
name = "brazilian_ecommerce"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.8.7"

# Async Runtime (Required by Axum)
tokio = { version = "1.48.0", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# Environment variables
dotenvy = "0.15.7"

# Serialization (JSON)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Async functions
async-trait = "0.1.89"

# Logging
tracing-subscriber = "0.3.20"
tracing = "0.1.41"

# Time
chrono = { version = "0.4.42", features = ["serde"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
